examples/negative/pub_enforcement/violation_import/main.kai
import lib

fn main() : Unit / Console {
  print(int_to_string(visible()))
  print(int_to_string(secret()))
}
